# Snap7Client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
snap7-full-1.4.2/src/sys/: snap_msgsock.cpp
